# matrix-calculator

./: .gitignore  CMakeLists.txt  Dockerfile  Doxyfile  README.md
.github/workflows/: ci.yml
include/: matrix.h
src/: main.cpp  matrix.cpp
tests/: CMakeLists.txt  test_matrix.cpp
